--- a/SemesterOppgave1/SemesterOppgave1/wwwroot/index.html
+++ b/SemesterOppgave1/SemesterOppgave1/wwwroot/index.html
@@ -3,9 +3,10 @@
 <head>
     <meta charset="UTF-8">
     <link rel="stylesheet" type="text/css" href="css/index.css" media="screen" />
-    <script src="https://code.jquery.com/jquery-3.6.0.js"></script>
-    <script src="js/index.js"></script>
-    <script src="js/confirmation.js"></script>
+    <script type="text/javascript" src="https://code.jquery.com/jquery-3.6.0.js"></script>
+    <script type="text/javascript" src="http://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"> </script>
+
+    <script src="js/orderConfirmation.js"></script>
     <title>Holbergs Båte</title>
 </head>
 <body>
@@ -14,17 +15,22 @@
 </nav>
 <main>
     <div id="content">
-        
+
     </div>
 
-    <button id="buyTicket" onclick="orderTicket">
+    <button id="buyTicket">
         Buy order
     </button>
 
+
     <div id="popUp">
-        <span id="close" class="close">&times;</span>
-        <h3 id="pop-up title">Your order has been succesfully placed.</h3>
-        <p>Thank you so much for ordering a ticket. We will get back to you ...</p>
+        <div id="popUp-content">
+            <div id="popUp-content-close">
+                &times;
+            </div>
+            <h3>Your order has been succesfully placed.</h3>
+            <p>Thank you so much for ordering a ticket. We will get back to you ...</p>
+    </div>
     </div>
 </main>
 <footer>
