--- a/SemesterOppgave1/SemesterOppgave1/wwwroot/index.html
+++ b/SemesterOppgave1/SemesterOppgave1/wwwroot/index.html
@@ -22,6 +22,7 @@
      https://pixabay.com/photos/fjord-river-norway-snow-snowy-4278117/
          -->
         <div id="ordering">
+            <h3>Buy your tickets now:</h3>
             <div>
                 <label for="fromPlace">From</label>
                 <select id="fromPlace" name="from">
