minor design changes

--- a/SemesterOppgave1/SemesterOppgave1/wwwroot/index.html
+++ b/SemesterOppgave1/SemesterOppgave1/wwwroot/index.html
@@ -12,41 +12,45 @@
 <body>
 <nav>
     <div class="nav-logo">
-
+        <!--LOGO HERE?-->
     </div>
-    <p>WELCOME to the NAVBAR :)</p>
 </nav>
 <main>
 
 
-    <div id="content">
+    <div id="image">
         <img id="orderingPicture" src="Pictures/fjord-4278117_1920.jpg" alt="Fjord in the snow" />
-     <!--This image was provided by danielbil99 and was free to use. The picture can be found here:
-     https://pixabay.com/photos/fjord-river-norway-snow-snowy-4278117/
-         -->
+        <!--This image was provided by danielbil99 and was free to use. The picture can be found here:
+    https://pixabay.com/photos/fjord-river-norway-snow-snowy-4278117/
+        -->
+    </div>
+
+    <div id="content">
         <div id="ordering">
             <h3>Buy your tickets now:</h3>
-            <div>
+            <div id="fromTo">
                 <label for="fromPlace">From</label>
                 <select id="fromPlace" name="from">
                     <option>Oslo</option>
                     <option>Kristiansand</option>
                 </select>
             </div>
-            <div>
+            <div id="fromTo">
                 <label for="toPlace">To</label>
                 <select id="toPlace" name="from">
                     <option>Oslo</option>
                     <option>Kristiansand</option>
                 </select>
             </div>
-            <div>
+            <div id="order">
                 <button id="buyTicket">
                     Buy ticket
                 </button>
             </div>
         </div>
+ 
     </div>
+
     <div id="popUp">
         <div id="popUp-content">
             <div id="popUp-content-close">
@@ -56,7 +60,6 @@
             <p>Thank you so much for ordering a ticket. We will get back to you ...</p>
         </div>
     </div>
-
 
 </main>
 <footer>
