--- a/SemesterOppgave1/SemesterOppgave1/wwwroot/test.html
+++ b/SemesterOppgave1/SemesterOppgave1/wwwroot/test.html
@@ -4,9 +4,20 @@
     <meta charset="UTF-8">
     <link rel="stylesheet" type="text/css" href="css/index.css" media="screen" />
     <script src="https://code.jquery.com/jquery-3.6.0.js"></script>
-    <script src="js/kunde.js"></script>
+    <script src="js/routeDataLoader.js"></script>
 </head>
 <body>
-    
+    <div id="orderbox-params-to" class="orderbox-params-dropdown">
+        <label for="toPlace">To</label>
+        <select id="toPlace" name="from">
+        </select>
+    </div>
+    <div id="orderbox-params-when" class="orderbox-params-dropdown">
+        <label for="date">Date</label>
+        <select id="date" name="date">
+            <option>Test</option>
+            <option>Test2</option>
+        </select>
+    </div>
 </body>
 </html>
