--- a/SemesterOppgave1/SemesterOppgave1/wwwroot/test.html
+++ b/SemesterOppgave1/SemesterOppgave1/wwwroot/test.html
@@ -7,16 +7,17 @@
     <script src="js/routeDataLoader.js"></script>
 </head>
 <body>
-    <div id="orderbox-params-to" class="orderbox-params-dropdown">
-        <label for="toPlace">To</label>
-        <select id="toPlace" name="from">
+    <div id="orderbox-params-when" class="orderbox-params-dropdown">
+        <label for="fromPlace">From</label>
+        <select id="fromPlace" name="date">
+            <option value="" disabled selected hidden>From...</option>
+
         </select>
     </div>
-    <div id="orderbox-params-when" class="orderbox-params-dropdown">
-        <label for="date">Date</label>
-        <select id="date" name="date">
-            <option>Test</option>
-            <option>Test2</option>
+    <div id="orderbox-params-to" class="orderbox-params-dropdown">
+        <label for="toPlace">To</label>
+        <select id="toPlace" name="to">
+            <option value="" disabled selected hidden>Select your from destination first...</option>
         </select>
     </div>
 </body>
