made methods for getAllTerminals, but get 404

--- a/SemesterOppgave1/SemesterOppgave1/wwwroot/calendar.html
+++ b/SemesterOppgave1/SemesterOppgave1/wwwroot/calendar.html
@@ -13,6 +13,12 @@
     <script src="js/calendar.js"></script>
 </head>
 <body>
-<div id="my-calendar"></div>
+    <div id="container">
+        <div id="my-calendar"></div>
+        <select id="toPlace">
+            <option id="noPlace" selected disabled hidden>from </option>
+        </select>
+    </div>
+
 </body>
 </html>
