--- a/SemesterOppgave1/SemesterOppgave1/wwwroot/calendar.html
+++ b/SemesterOppgave1/SemesterOppgave1/wwwroot/calendar.html
@@ -19,6 +19,12 @@
             <option id="noPlace" selected disabled hidden>from </option>
         </select>
     </div>
+    <div id="container2">
+        <div id="my-calendar"></div>
+        <select id="toPlace">
+            <option id="noPlace" selected disabled hidden>from </option>
+        </select>
+    </div>
 
 </body>
 </html>
