--- a/SemesterOppgave1/SemesterOppgave1/wwwroot/index.html
+++ b/SemesterOppgave1/SemesterOppgave1/wwwroot/index.html
@@ -1,77 +1,99 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link
+        href="https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap"
+        rel="stylesheet">
+    <link rel="stylesheet" type="text/css" href="css/general.css" media="screen" />
     <link rel="stylesheet" type="text/css" href="css/index.css" media="screen" />
     <script type="text/javascript" src="https://code.jquery.com/jquery-3.6.0.js"></script>
     <script type="text/javascript" src="http://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"> </script>
-
+    <script type="text/javascript" src="js/customelements/navbar.js"></script>
+    <script type="text/javascript" src="js/customelements/footer.js"></script>
     <script src="js/orderConfirmation.js"></script>
     <title>Holbergs Båter</title>
 </head>
+
 <body>
-<nav id="nav">
-    <div class="nav-logo">
-        <img class="nav-logo-img" src="Pictures/Logo.png" alt="Logo">
-    </div>
-</nav>
-<main id="main">
-    <div class="orders">
+    <custom-navbar></custom-navbar>
+    <main id="main">
         <div id="hero">
             <img class="hero-img" src="Pictures/fjord-4278117_1920.jpg" alt="Fjord in the snow" />
             <!--This image was provided by danielbil99 and was free to use. The picture can be found here:
-        https://pixabay.com/photos/fjord-river-norway-snow-snowy-4278117/
+                https://pixabay.com/photos/fjord-river-norway-snow-snowy-4278117/
             -->
         </div>
-        
-        <div id="orderbox">
-            <h2>Select route</h2>
-            <div id="orderbox-params">
-                <div id="orderbox-params-from" class="orderbox-params-dropdown">
-                    <label for="fromPlace">From</label>
-                    <select id="fromPlace" name="from">
-                        <option>Oslo</option>
-                        <option>Kristiansand</option>
-                    </select>
+
+        <div id="content">
+            <div id="orderbox">
+                <h2>Select route</h2>
+                <div id="orderbox-params">
+                    <div id="orderbox-params-from" class="orderbox-params-dropdown">
+                        <label for="fromPlace">From</label>
+                        <select id="fromPlace" name="from">
+                            <option>Oslo</option>
+                            <option>Kristiansand</option>
+                        </select>
+                    </div>
+                    <div id="orderbox-params-to" class="orderbox-params-dropdown">
+                        <label for="toPlace">To</label>
+                        <select id="toPlace" name="from">
+                            <option>Oslo</option>
+                            <option>Kristiansand</option>
+                        </select>
+                    </div>
+                    <div id="orderbox-params-when" class="orderbox-params-dropdown">
+                        <label for="date">Date</label>
+                        <select id="date" name="date">
+                            <option>Test</option>
+                            <option>Test2</option>
+                        </select>
+                    </div>
+                    <button id="buyTicket">
+                        Buy ticket
+                    </button>
                 </div>
-                <div id="orderbox-params-to" class="orderbox-params-dropdown">
-                    <label for="toPlace">To</label>
-                    <select id="toPlace" name="from">
-                        <option>Oslo</option>
-                        <option>Kristiansand</option>
-                    </select>
+                <div id="orderbox-extend">
+
                 </div>
-                <div id="orderbox-params-when" class="orderbox-params-dropdown">
-                    <label for="date">Date</label>
-                    <select id="date" name="date">
-                        <option>Test</option>
-                        <option>Test2</option>
-                    </select>
-                </div>
-                <button id="buyTicket">
-                    Buy ticket
-                </button>
             </div>
-            <div id="orderbox-extend">
-                
+
+
+            <!--    <div id="popUp">-->
+            <!--        <div id="popUp-content">-->
+            <!--            <div id="popUp-content-close">-->
+            <!--                &times;-->
+            <!--            </div>-->
+            <!--            <h3>Your order has been succesfully placed.</h3>-->
+            <!--            <p>Thank you so much for ordering a ticket. We will get back to you ...</p>-->
+            <!--        </div>-->
+            <!--    </div>-->
+
+            <div id="travelinfo">
+                <div class="travelinfo-box">
+                    <img src="./Pictures/schedule.svg" class="travelinfo-img">
+                    <p class="travelinfo-title">Arrive 30 minutes in advance</p>
+                    <p class="travelinfo-txt">We will not delay our cruises because of you.</p>
+                </div>
+                <div class="travelinfo-box">
+                    <img src="./Pictures/face-mask.svg" class="travelinfo-img">
+                    <p class="travelinfo-title">You must wear a mask</p>
+                    <p class="travelinfo-txt">It is mandatory to wear a mask in all common spaces.
+                    </p>
+                </div>
+                <div class="travelinfo-box">
+                    <img src="./Pictures/covid.svg" class="travelinfo-img">
+                    <p class="travelinfo-title">Passengers must be vaccinated</p>
+                    <p class="travelinfo-txt">Bring a valid certificate of vaccination.</p>
+                </div>
             </div>
         </div>
-    </div>
-
-
-<!--    <div id="popUp">-->
-<!--        <div id="popUp-content">-->
-<!--            <div id="popUp-content-close">-->
-<!--                &times;-->
-<!--            </div>-->
-<!--            <h3>Your order has been succesfully placed.</h3>-->
-<!--            <p>Thank you so much for ordering a ticket. We will get back to you ...</p>-->
-<!--        </div>-->
-<!--    </div>-->
-
-</main>
-<footer id="footer">
-    <p>Holbergs Båter is a limited responsibility company. <br> All responsibility is on you.</p>
-</footer>
+    </main>
+    <custom-footer></custom-footer>
 </body>
+
 </html>
