--- a/SemesterOppgave1/SemesterOppgave1/wwwroot/index.html
+++ b/SemesterOppgave1/SemesterOppgave1/wwwroot/index.html
@@ -14,6 +14,8 @@
     <script type="text/javascript" src="http://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"> </script>
     <script type="text/javascript" src="js/customelements/navbar.js"></script>
     <script type="text/javascript" src="js/customelements/footer.js"></script>
+    <script type="text/javascript" src="js/customelements/calendar.js"></script>
+    <script type="text/javascript" src="js/index.js"></script>
     <script src="js/orderConfirmation.js"></script>
     <title>Holbergs Båter</title>
 </head>
@@ -58,7 +60,6 @@
                     </button>
                 </div>
                 <div id="orderbox-extend">
-
                 </div>
             </div>
 
