--- a/SemesterOppgave1/SemesterOppgave1/wwwroot/order.html
+++ b/SemesterOppgave1/SemesterOppgave1/wwwroot/order.html
@@ -1,48 +1,60 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
+    <meta charset="utf-8">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap"
+          rel="stylesheet">
+    <link rel="stylesheet" type="text/css" href="css/general.css" media="screen" />
     <link rel="stylesheet" type="text/css" href="css/index.css" media="screen" />
     <script src="https://code.jquery.com/jquery-3.6.0.js"></script>
+    <script type="text/javascript" src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
+    <script type="text/javascript" src="js/customelements/navbar.js"></script>
+    <script type="text/javascript" src="js/customelements/footer.js"></script>
     <script src="js/order.js"></script>
     <title>Holbergs Båte - Database</title>
 </head>
 <body>
-<nav>
-
-</nav>
-<main>
-    <h1>Order tickets!</h1>
-    <div id="content">
-        <p id="tripInfo"></p>
-        <form onsubmit="createOrder()">
-            <label for="departureTime">Departure time:</label>
-            <input type="date" name="departureTime" id="departureTime" />
-            <label for="arrivalTime">Arrival time:</label>
-            <input type="date" name="arrivalTime" id="arrivalTime" />
-            <label for="firstName">Enter first name:</label>
-            <input type="text" name="firstName" id="firstName" placeholder="First name" />
-            <label for="lastName">Enter last name:</label>
-            <input type="text" name="lastName" id="lastName" placeholder="Last name" />
-            <label for="phoneNr">Enter phone number:</label>
-            <input type="text" name="phoneNr" id="phoneNr" placeholder="Phone number" />
-            <label for="email">Enter email:</label>
-            <input type="text" name="email" id="email" placeholder="Email" />
-            <label for="streetName">Enter street name:</label>
-            <input type="text" name="streetName" id="streetName" placeholder="Street name" />
-            <label for="zipCode">Enter zip code:</label>
-            <input type="text" name="zipCode" id="zipCode" placeholder="Zip code" />
-            <label for="cityName">Enter city:</label>
-            <input type="text" name="cityName" id="cityName" placeholder="City name" />
-            <label for="ticketAmount">Amount of tickets:</label>
-            <input type="number" name="ticketAmount" id="ticketAmount" placeholder="Ticket amount" />
-            <input type="submit" value="Order ticket" />
-        </form>
-    </div>
-</main>
-<footer>
-
-</footer>
-<div></div>
+    <custom-navbar></custom-navbar>
+    <!-- Addet en style her, bare midlertidig, for at ikke footer skulle være midt på skjermen ^^ -->
+    <main style="min-height: 74.5vh">
+        <h1>Order tickets!</h1>
+        <div id="content">
+            <p id="tripInfo"></p>
+            <form onsubmit="return false">
+                <label for="departureTime">Departure time:</label>
+                <input type="date" name="departureTime" id="departureTime" />
+                <label for="arrivalTime">Arrival time:</label>
+                <input type="date" name="arrivalTime" id="arrivalTime" />
+                <label for="boatName">Boat:</label>
+                <select id="boatName">
+                    <option value="Colorline">Colorline</option>
+                    <option value="Hurtigruten">Hurtigruten</option>
+                    <option value="DFDS">DFDS</option>
+                    <option value="FjordLine">FjordLine</option>
+                </select>
+                <label for="firstName">Enter first name:</label>
+                <input type="text" name="firstName" id="firstName" placeholder="First name" />
+                <label for="lastName">Enter last name:</label>
+                <input type="text" name="lastName" id="lastName" placeholder="Last name" />
+                <label for="phoneNr">Enter phone number:</label>
+                <input type="text" name="phoneNr" id="phoneNr" placeholder="Phone number" />
+                <label for="email">Enter email:</label>
+                <input type="text" name="email" id="email" placeholder="Email" />
+                <label for="streetName">Enter street name:</label>
+                <input type="text" name="streetName" id="streetName" placeholder="Street name" />
+                <label for="zipCode">Enter zip code:</label>
+                <input type="text" name="zipCode" id="zipCode" placeholder="Zip code" />
+                <label for="cityName">Enter city:</label>
+                <input type="text" name="cityName" id="cityName" placeholder="City name" />
+                <label for="ticketAmount">Amount of tickets:</label>
+                <input type="number" name="ticketAmount" id="ticketAmount" placeholder="Ticket amount" />
+                <input type="submit" value="Order ticket" onclick="createOrder()"/>
+            </form>
+        </div>
+        <p id="info"></p>
+    </main>
+    <custom-footer></custom-footer>
 </body>
 </html>
