--- a/SemesterOppgave1/SemesterOppgave1/wwwroot/order.html
+++ b/SemesterOppgave1/SemesterOppgave1/wwwroot/order.html
@@ -22,35 +22,70 @@
         <h1>Order tickets!</h1>
         <div id="content">
             <p id="tripInfo"></p>
-            <form onsubmit="return false">
-                <label for="departureTime">Departure time:</label>
-                <input type="date" name="departureTime" id="departureTime" />
-                <label for="arrivalTime">Arrival time:</label>
-                <input type="date" name="arrivalTime" id="arrivalTime" />
-                <label for="boatName">Boat:</label>
-                <select id="boatName">
-                    <option value="Colorline">Colorline</option>
-                    <option value="Hurtigruten">Hurtigruten</option>
-                    <option value="DFDS">DFDS</option>
-                    <option value="FjordLine">FjordLine</option>
-                </select>
-                <label for="firstName">Enter first name:</label>
-                <input type="text" name="firstName" id="firstName" placeholder="First name" />
-                <label for="lastName">Enter last name:</label>
-                <input type="text" name="lastName" id="lastName" placeholder="Last name" />
-                <label for="phoneNr">Enter phone number:</label>
-                <input type="text" name="phoneNr" id="phoneNr" placeholder="Phone number" />
-                <label for="email">Enter email:</label>
-                <input type="text" name="email" id="email" placeholder="Email" />
-                <label for="streetName">Enter street name:</label>
-                <input type="text" name="streetName" id="streetName" placeholder="Street name" />
-                <label for="zipCode">Enter zip code:</label>
-                <input type="text" name="zipCode" id="zipCode" placeholder="Zip code" />
-                <label for="cityName">Enter city:</label>
-                <input type="text" name="cityName" id="cityName" placeholder="City name" />
-                <label for="ticketAmount">Amount of tickets:</label>
-                <input type="number" name="ticketAmount" id="ticketAmount" placeholder="Ticket amount" />
-                <input type="submit" value="Order ticket" onclick="createOrder()"/>
+            <form onsubmit="validateAndOrder()">
+
+                <div class="form-check-group">
+                    <label for="departureTime">Departure time:</label>
+                    <input type="date" name="departureTime" id="departureTime" />
+                </div>
+
+                <div class="form-check-group">
+                    <label for="arrivalTime">Arrival time:</label>
+                    <input type="date" name="arrivalTime" id="arrivalTime" />
+                </div>
+
+                <div class="form-check-group">
+                    <label for="boatName">Boat:</label>
+                    <select id="boatName">
+                        <option value="Colorline">Colorline</option>
+                        <option value="Hurtigruten">Hurtigruten</option>
+                        <option value="DFDS">DFDS</option>
+                        <option value="FjordLine">FjordLine</option>
+                    </select>
+                </div>
+
+                <div class="form-check-group">
+                    <label for="firstName">Enter first name:</label>
+                    <input type="text" name="firstName" id="firstName" placeholder="First name" />
+                </div>
+
+                <div class="form-check-group">
+                    <label for="lastName">Enter last name:</label>
+                    <input type="text" name="lastName" id="lastName" placeholder="Last name" />
+                </div>
+
+                <div class="form-check-group">
+                    <label for="phoneNr">Enter phone number:</label>
+                    <input type="text" name="phoneNr" id="phoneNr" placeholder="Phone number" />
+                </div>
+
+                <div class="form-check-group">
+                    <label for="email">Enter email:</label>
+                    <input type="text" name="email" id="email" placeholder="Email" />
+                </div>
+
+                <div class="form-check-group">
+                    <label for="streetName">Enter street name:</label>
+                    <input type="text" name="streetName" id="streetName" placeholder="Street name" />
+                </div>
+
+                <div class="form-check-group">
+                    <label for="zipCode">Enter zip code:</label>
+                    <input type="text" name="zipCode" id="zipCode" placeholder="Zip code" />
+                </div>
+
+                <div class="form-check-group">
+                    <label for="cityName">Enter city:</label>
+                    <input type="text" name="cityName" id="cityName" placeholder="City name" />
+                </div>
+
+                <div class="form-check-group">
+                    <label for="ticketAmount">Amount of tickets:</label>
+                    <input type="number" min="0" name="ticketAmount" id="ticketAmount" placeholder="Ticket amount" />
+                </div>
+
+               
+                <input type="submit" value="Order ticket"/>
             </form>
         </div>
         <p id="info"></p>
