added some small changes and comments to order html and js

--- a/SemesterOppgave1/SemesterOppgave1/wwwroot/index.html
+++ b/SemesterOppgave1/SemesterOppgave1/wwwroot/index.html
@@ -48,10 +48,10 @@
                     </div>
                     <div id="orderbox-params-when" class="orderbox-params-dropdown">
                         <label for="date">Date</label>
-                        <select id="date" name="date">
-                            <option>Test</option>
+                        <input id="date" name="date" />
+                            <!--<option>Test</option>
                             <option>Test2</option>
-                        </select>
+                        </select>-->
                     </div>
                     <button id="buyTicket" onclick="orderTickets()">
                         Buy ticket
