Changed order.js and html

--- a/SemesterOppgave1/SemesterOppgave1/wwwroot/order.html
+++ b/SemesterOppgave1/SemesterOppgave1/wwwroot/order.html
@@ -23,6 +23,7 @@
         <h1>Order tickets!</h1>
         <div id="content">
             <p id="tripInfo"></p>
+            <p id="tripInfo2"></p>
             <form id="orderForm" onsubmit="return false">
 
                 <div class="form-check-group">
