Fixed metge-related bugs for index.js/calendar

--- a/SemesterOppgave1/SemesterOppgave1/wwwroot/index.html
+++ b/SemesterOppgave1/SemesterOppgave1/wwwroot/index.html
@@ -37,13 +37,14 @@
                 <div id="orderbox-ways">
 
                     <label for="orderbox-oneway" class="orderbox-ways-lbl" tabindex="0">
-                        <input type="radio" name="nrTrips" id="orderbox-oneway" class="orderbox-ways-radio">
+                        <input type="radio" value="oneway" name="nrTrips" id="orderbox-oneway"
+                            class="orderbox-ways-radio">
                         <span>One way</span>
                     </label>
 
                     <label for="orderbox-roundtrip" class="orderbox-ways-lbl" tabindex="0">
-                        <input type="radio" name="nrTrips" id="orderbox-roundtrip" class="orderbox-ways-radio"
-                            checked="checked">
+                        <input type="radio" value="roundtrip" name="nrTrips" id="orderbox-roundtrip"
+                            class="orderbox-ways-radio" checked="checked">
                         <span>Round trip</span>
                     </label>
                 </div>
