Fixed paths, changed icon

--- a/SemesterOppgave1/SemesterOppgave1/wwwroot/index.html
+++ b/SemesterOppgave1/SemesterOppgave1/wwwroot/index.html
@@ -25,7 +25,7 @@
     <custom-navbar></custom-navbar>
     <main id="main">
         <div id="hero">
-            <img class="hero-img" src="Pictures/fjord-4278117_1920.jpg" alt="Fjord in the snow" />
+            <img class="hero-img" src="static/fjord-4278117_1920.jpg" alt="Fjord in the snow" />
             <!--This image was provided by danielbil99 and was free to use. The picture can be found here:
                 https://pixabay.com/photos/fjord-river-norway-snow-snowy-4278117/
             -->
@@ -89,18 +89,18 @@
 
             <div id="travelinfo">
                 <div class="travelinfo-box">
-                    <img src="./Pictures/schedule.svg" class="travelinfo-img">
+                    <img src="./static/schedule.svg" class="travelinfo-img">
                     <p class="travelinfo-title">Arrive 30 minutes in advance</p>
                     <p class="travelinfo-txt">We will not delay our cruises because of you.</p>
                 </div>
                 <div class="travelinfo-box">
-                    <img src="./Pictures/face-mask.svg" class="travelinfo-img">
+                    <img src="./static/face-mask.svg" class="travelinfo-img">
                     <p class="travelinfo-title">You must wear a mask</p>
                     <p class="travelinfo-txt">It is mandatory to wear a mask in all common spaces.
                     </p>
                 </div>
                 <div class="travelinfo-box">
-                    <img src="./Pictures/covid.svg" class="travelinfo-img">
+                    <img src="./static/covid.svg" class="travelinfo-img">
                     <p class="travelinfo-title">Passengers must be vaccinated</p>
                     <p class="travelinfo-txt">Bring a valid certificate of vaccination.</p>
                 </div>
