Handles placeholder and select-onclick errors

--- a/SemesterOppgave1/SemesterOppgave1/wwwroot/index.html
+++ b/SemesterOppgave1/SemesterOppgave1/wwwroot/index.html
@@ -52,15 +52,13 @@
                     <div id="orderbox-params-from" class="orderbox-params-dropdown">
                         <label for="fromPlace">From</label>
                         <select id="fromPlace" name="from">
-                            <option value="noPlace" disabled selected hidden>Select departure location</option>
-                            <option value="test">Test</option>
+                            <option value="noPlace" disabled selected hidden>Select origin</option>
                         </select>
                     </div>
                     <div id="orderbox-params-to" class="orderbox-params-dropdown">
                         <label for="toPlace">To</label>
-                        <select id="toPlace" name="from">
-                            <option value="noPlace" disabled selected hidden>Select your from destination first...
-                            </option>
+                        <select id="toPlace" name="to">
+                            <option value="noPlace" disabled selected hidden>Select destination</option>
                         </select>
                     </div>
                     <div id="orderbox-params-when" class="orderbox-params-dropdown">
