Changed order.js, order.html, almost all the models, the repository. Fixed regexes, fixed the saveOrder method, fixed saving two orders at the same time in order.js. Lots of things. :)

--- a/SemesterOppgave1/SemesterOppgave1/wwwroot/hentAlle.html
+++ b/SemesterOppgave1/SemesterOppgave1/wwwroot/hentAlle.html
@@ -3,7 +3,9 @@
 <head>
     <meta charset="utf-8" />
     <title></title>
-    <script src="js/hantAlle.js"></script>
+    <script type="text/javascript" src="https://code.jquery.com/jquery-3.6.0.js"></script>
+    <script type="text/javascript" src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
+    <script src="js/kunde.js"></script>
 </head>
 <body>
     <div class="container">
