--- a/SemesterOppgave1/SemesterOppgave1/wwwroot/order.html
+++ b/SemesterOppgave1/SemesterOppgave1/wwwroot/order.html
@@ -19,7 +19,7 @@
 <body>
     <custom-navbar></custom-navbar>
     <!-- Addet en style her, bare midlertidig, for at ikke footer skulle være midt på skjermen ^^ -->
-    <main style="min-height: 74.5vh">
+    <main>
         <h1>Order tickets!</h1>
         <div id="content">
             <p id="tripInfo"></p>
